// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icon after renders as expected 1`] = `
<span
  className="flex-parent flex-parent--center-cross"
>
  <span
    className="flex-child"
  >
    Next
  </span>
  <span
    className="flex-child ml3"
  >
    <Icon
      inline={false}
      name="chevron-right"
      passthroughProps={Object {}}
      size={18}
    />
  </span>
</span>
`;

exports[`icon before renders as expected 1`] = `
<span
  className="flex-parent flex-parent--center-cross"
>
  <span
    className="flex-child mr3"
  >
    <Icon
      inline={false}
      name="clipboard"
      passthroughProps={Object {}}
      size={18}
    />
  </span>
  <span
    className="flex-child"
  >
    Copy
  </span>
</span>
`;

exports[`icons on both sides, including a non-string one renders as expected 1`] = `
<span
  className="flex-parent flex-parent--center-cross"
>
  <span
    className="flex-child mr3"
  >
    <Icon
      inline={false}
      name="check"
      passthroughProps={Object {}}
      size={18}
    />
  </span>
  <span
    className="flex-child"
  >
    What
  </span>
  <span
    className="flex-child ml3"
  >
    <Icon
      inline={false}
      name="github"
      passthroughProps={Object {}}
      size={18}
    />
  </span>
</span>
`;

exports[`large gap renders as expected 1`] = `
<span
  className="flex-parent flex-parent--center-cross"
>
  <span
    className="flex-child mr6"
  >
    <Icon
      inline={false}
      name="check"
      passthroughProps={Object {}}
      size={18}
    />
  </span>
  <span
    className="flex-child"
  >
    Done
  </span>
</span>
`;
